--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     
-    <title>Game of hats</title>
+    <title>Game of hats 2</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
@@ -12,22 +12,21 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-database.js"></script>
 
-
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyC1R-6ciqAn2fWxoi99RU_8aeLRhydein4",
+        authDomain: "game-of-hats-856f4.firebaseapp.com",
+        projectId: "game-of-hats-856f4",
+        storageBucket: "game-of-hats-856f4.appspot.com",
+        messagingSenderId: "793536096775",
+        appId: "1:793536096775:web:b7886d5884ba4ef59f98a2"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
   
-     <script>
-  // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyB77vhO9YeqZreC632hdQAFU-bymC6iN0A",
-    authDomain: "game-of-hats.firebaseapp.com",
-    projectId: "game-of-hats",
-    storageBucket: "game-of-hats.appspot.com",
-    messagingSenderId: "27943727701",
-    appId: "1:27943727701:web:8d642244f71248bad1dadc"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-
-</script>
+  
 
     
     <script src="js/Form.js"></script>
