--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <script src="js/Form.js"></script>
     <script src="js/Game.js"></script>
     <script src="js/Task.js"></script>
+    <script src ="js/Task2.js"></script>
+  
     <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
   <body>
