--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-database.js"></script>
 
-    <script>
-      // Your web app's Firebase configuration
-      var firebaseConfig = {
-        apiKey: "AIzaSyC1R-6ciqAn2fWxoi99RU_8aeLRhydein4",
-        authDomain: "game-of-hats-856f4.firebaseapp.com",
-        projectId: "game-of-hats-856f4",
-        storageBucket: "game-of-hats-856f4.appspot.com",
-        messagingSenderId: "793536096775",
-        appId: "1:793536096775:web:b7886d5884ba4ef59f98a2"
-      };
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-    </script>
-  
-  
+   
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyAk_oywocYGOP8TDpZBrGvmiKnXmzD2kNg",
+    authDomain: "game-of-hat.firebaseapp.com",
+    databaseURL: "https://game-of-hat-default-rtdb.firebaseio.com",
+    projectId: "game-of-hat",
+    storageBucket: "game-of-hat.appspot.com",
+    messagingSenderId: "323503199556",
+    appId: "1:323503199556:web:576a7645f717d0b2ddf311"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 
     
     <script src="js/Form.js"></script>
     <script src="js/Game.js"></script>
     <script src="js/Task.js"></script>
     <script src ="js/Task2.js"></script>
-  
+  <script src ="js/Task3.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
   <body>
