--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <script src="js/Game.js"></script>
     <script src="js/Task.js"></script>
     <script src ="js/Task2.js"></script>
-  <script src ="js/Task3.js"></script>
+  <script src ="js/Interval.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
   <body>
