--- a/index.html
+++ b/index.html
@@ -13,28 +13,31 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-database.js"></script>
 
    
-<script>
-  // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyAk_oywocYGOP8TDpZBrGvmiKnXmzD2kNg",
-    authDomain: "game-of-hat.firebaseapp.com",
-    databaseURL: "https://game-of-hat-default-rtdb.firebaseio.com",
-    projectId: "game-of-hat",
-    storageBucket: "game-of-hat.appspot.com",
-    messagingSenderId: "323503199556",
-    appId: "1:323503199556:web:576a7645f717d0b2ddf311"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-</script>
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyDFd7X6ISzQPO51l3y2TV_vkzfuGihUsso",
+        authDomain: "game-of-hats-fbece.firebaseapp.com",
+        databaseURL: "https://game-of-hats-fbece-default-rtdb.firebaseio.com",
+        projectId: "game-of-hats-fbece",
+        storageBucket: "game-of-hats-fbece.appspot.com",
+        messagingSenderId: "1085222025615",
+        appId: "1:1085222025615:web:c640cbd7475413cd34f3fa"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
 
     
     <script src="js/Form.js"></script>
     <script src="js/Game.js"></script>
     <script src="js/Task.js"></script>
     <script src ="js/Task2.js"></script>
-  <script src ="js/Interval.js"></script>
-  <script src ="js/Task3.js"></script>
+    <script src ="js/Interval.js"></script>
+    <script src ="js/Task3.js"></script>
+    <script src ="js/Restart1.js"></script>
+    <script src ="js/Restart2.js"></script>
+
     <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
   <body>
