--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
     </script>
 
     
-    <script src ="js/Form.js"></script>
-    <script src ="js/Game.js"></script>
-    <script src ="js/Task.js"></script>
-    <script src ="js/Task2.js"></script>
-    <script src ="js/Interval.js"></script>
-    <script src ="js/Task3.js"></script>
-    <script src ="js/Task4.js"></script>
-    <script src ="js/Task5.js"></script>
-    <script src ="js/Restart1.js"></script>
-    <script src ="js/Restart2.js"></script>
-    <script src ="js/Restart3.js"></script>
-    <script src ="js/Restart4.js"></script>
-    <script src ="js/Next.js"></script>
-    <script src ="js/Next2.js"></script>
-    <script src ="js/NEXT3.js"></script>
-    <script src ="js/Next4.js"></script>
-    <script src ="js/Final.js"></script>
+    <script src ="Form.js"></script>
+    <script src ="Game.js"></script>
+    <script src ="Task.js"></script>
+    <script src ="Task2.js"></script>
+    <script src ="Interval.js"></script>
+    <script src ="Task3.js"></script>
+    <script src ="Task4.js"></script>
+    <script src ="Task5.js"></script>
+    <script src ="Restart1.js"></script>
+    <script src ="Restart2.js"></script>
+    <script src ="Restart3.js"></script>
+    <script src ="Restart4.js"></script>
+    <script src ="Next.js"></script>
+    <script src ="Next2.js"></script>
+    <script src ="NEXT3.js"></script>
+    <script src ="Next4.js"></script>
+    <script src ="Final.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
